--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,9 @@
     }
   },
   "env": {
-    "browser": true
+    "browser": true,
+    "es6": true,
+    "node": true
   },
   "globals": {},
   "rules": {}
