--- a/package.json
+++ b/package.json
@@ -1,17 +1,30 @@
 {
-  "name": "ukeepio",
+  "name": "front-end-template",
   "version": "0.1.0",
-  "description": "",
-  "main": "index.js",
+  "description": "this is a front end template using react, redux, and webpack",
   "scripts": {
-    "start:dev": "webpack --config webpack.config.js",
+    "start:dev": "webpack-dev-server --config webpack.config.js --progress --inline --hot",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-loader": "6.2.5",
-    "babel-preset-es2015": "6.14.0",
-    "webpack": "1.13.2"
+    "babel-core": "^6.14.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.14.0",
+    "css-loader": "^0.25.0",
+    "file-loader": "^0.9.0",
+    "html-loader": "^0.4.3",
+    "html-webpack-plugin": "^2.22.0",
+    "json-loader": "^0.5.4",
+    "raw-loader": "^0.5.1",
+    "style-loader": "^0.13.1",
+    "webpack": "1.13.2",
+    "webpack-dev-server": "^1.15.1"
+  },
+  "dependencies": {
+    "object-assign": "^4.1.0",
+    "promise": "^7.1.1",
+    "whatwg-fetch": "^1.0.0"
   }
 }
