--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,11 @@
 {
-  "extends": "eslint:recommended",
+  "extends": ["plugin:react/recommended", "standard"],
   "parserOptions": {
-    "ecmaVersion": 6,
+    "ecmaVersion": 7,
     "sourceType": "module",
     "ecmaFeatures": {
-      "impliedStrict": true
+      "impliedStrict": true,
+      "jsx": true
     }
   },
   "env": {
@@ -12,6 +13,13 @@
     "es6": true,
     "node": true
   },
-  "globals": {},
+  "plugins": [
+    "react"
+  ],
+  "globals": {
+    "describe": true,
+    "it": true,
+    "React": true
+  },
   "rules": {}
 }
