--- a/package.json
+++ b/package.json
@@ -3,28 +3,51 @@
   "version": "0.1.0",
   "description": "this is a front end template using react, redux, and webpack",
   "scripts": {
+    "start": "npm run start:dev",
     "start:dev": "webpack-dev-server --config webpack.config.js --progress --inline --hot",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm run test:lint",
+    "test:1": "mocha ./tests/setup.js ./src/**/*.test.js",
+    "test:unit": "exit 1",
+    "test:lint": "eslint -c ./.eslintrc *.js, ./src/*.js, ./src/**/*.js --color; exit 0"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Jordan Papaleo",
+  "license": "",
   "devDependencies": {
-    "babel-core": "^6.14.0",
-    "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.14.0",
-    "css-loader": "^0.25.0",
-    "file-loader": "^0.9.0",
-    "html-loader": "^0.4.3",
-    "html-webpack-plugin": "^2.22.0",
-    "json-loader": "^0.5.4",
-    "raw-loader": "^0.5.1",
-    "style-loader": "^0.13.1",
+    "babel-core": "6.14.0",
+    "babel-loader": "6.2.5",
+    "babel-preset-es2015": "6.14.0",
+    "babel-preset-react": "6.11.1",
+    "chai": "^3.5.0",
+    "css-loader": "0.25.0",
+    "enzyme": "^2.4.1",
+    "eslint": "3.5.0",
+    "eslint-config-standard": "6.0.0",
+    "eslint-loader": "1.5.0",
+    "eslint-plugin-react": "6.2.0",
+    "file-loader": "0.9.0",
+    "html-loader": "0.4.3",
+    "html-webpack-plugin": "2.22.0",
+    "jsdom": "^9.5.0",
+    "json-loader": "0.5.4",
+    "less": "2.7.1",
+    "less-loader": "2.2.3",
+    "mocha": "^3.0.2",
+    "node-sass": "3.9.3",
+    "raw-loader": "0.5.1",
+    "react-addons-test-utils": "^15.3.1",
+    "sass-loader": "4.0.2",
+    "standard": "8.0.0",
+    "style-loader": "0.13.1",
     "webpack": "1.13.2",
-    "webpack-dev-server": "^1.15.1"
+    "webpack-dev-server": "1.15.1"
   },
   "dependencies": {
-    "object-assign": "^4.1.0",
-    "promise": "^7.1.1",
-    "whatwg-fetch": "^1.0.0"
+    "debug": "2.2.0",
+    "moment": "2.14.1",
+    "object-assign": "4.1.0",
+    "promise": "7.1.1",
+    "react": "15.3.1",
+    "react-dom": "15.3.1",
+    "whatwg-fetch": "1.0.0"
   }
 }
