--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "front-end-template",
+  "name": "zorroa-js-curator",
   "version": "0.1.0",
   "description": "this is a front end template using react, redux, and webpack",
   "scripts": {
