--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "npm run test:lint",
     "test:1": "mocha ./tests/setup.js ./src/**/*.test.js",
     "test:unit": "exit 1",
-    "test:lint": "eslint -c ./.eslintrc *.js, ./src/*.js, ./src/**/*.js --color; exit 0"
+    "test:lint": "eslint -c ./.eslintrc *.js, ./src/*.js, ./src/**/*.js --color; exit 0",
+    "purge": "rm -rf node_modules; npm cache clean; npm install"
   },
   "author": "Jordan Papaleo",
   "license": "",
@@ -27,14 +28,15 @@
     "file-loader": "0.9.0",
     "html-loader": "0.4.3",
     "html-webpack-plugin": "2.22.0",
-    "jsdom": "^9.5.0",
+    "jsdom": "9.5.0",
     "json-loader": "0.5.4",
     "less": "2.7.1",
     "less-loader": "2.2.3",
-    "mocha": "^3.0.2",
+    "mocha": "3.0.2",
     "node-sass": "3.9.3",
     "raw-loader": "0.5.1",
     "react-addons-test-utils": "^15.3.1",
+    "redux-devtools": "3.3.1",
     "sass-loader": "4.0.2",
     "standard": "8.0.0",
     "style-loader": "0.13.1",
@@ -48,6 +50,13 @@
     "promise": "7.1.1",
     "react": "15.3.1",
     "react-dom": "15.3.1",
+    "react-redux": "4.4.5",
+    "react-router": "2.8.0",
+    "react-router-redux": "4.0.5",
+    "redux": "3.6.0",
+    "redux-multi": "0.1.12",
+    "redux-promise": "0.5.3",
+    "redux-thunk": "2.1.0",
     "whatwg-fetch": "1.0.0"
   }
 }
