--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "description": "this is a front end template using react, redux, and webpack",
   "scripts": {
-    "start": "npm run start:dev",
-    "start:dev": "webpack-dev-server --config webpack.config.js --progress --inline --hot",
+    "start": "serve bin",
+    "start:dev": "webpack-dev-server --config ./build/webpack.dev.js --progress --inline --hot --open --colors --no-info",
+    "build": "npm test; webpack --config ./build/webpack.prod.js --progress --colors",
     "test": "npm run test:lint",
     "test:1": "mocha ./tests/setup.js ./src/**/*.test.js",
     "test:unit": "exit 1",
@@ -18,9 +19,9 @@
     "babel-loader": "6.2.5",
     "babel-preset-es2015": "6.14.0",
     "babel-preset-react": "6.11.1",
-    "chai": "^3.5.0",
+    "chai": "3.5.0",
     "css-loader": "0.25.0",
-    "enzyme": "^2.4.1",
+    "enzyme": "2.4.1",
     "eslint": "3.5.0",
     "eslint-config-standard": "6.0.0",
     "eslint-loader": "1.5.0",
@@ -38,6 +39,7 @@
     "react-addons-test-utils": "^15.3.1",
     "redux-devtools": "3.3.1",
     "sass-loader": "4.0.2",
+    "serve": "^1.4.0",
     "standard": "8.0.0",
     "style-loader": "0.13.1",
     "webpack": "1.13.2",
