working on testing

--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,8 @@
   "globals": {
     "describe": true,
     "it": true,
+    "expect": true,
+    "beforeEach": true,
     "React": true
   },
   "rules": {}
