--- a/package.json
+++ b/package.json
@@ -3,22 +3,31 @@
   "version": "0.1.0",
   "description": "this is a front end template using react, redux, and webpack",
   "scripts": {
-    "start": "serve bin",
-    "start:dev": "webpack-dev-server --config ./build/webpack.dev.js --progress --inline --hot --open --colors --no-info",
-    "build": "npm test; webpack --config ./build/webpack.prod.js --progress --colors",
-    "test": "npm run test:lint",
-    "test:1": "mocha ./tests/setup.js ./src/**/*.test.js",
-    "test:unit": "exit 1",
-    "test:lint": "eslint -c ./.eslintrc *.js, ./src/*.js, ./src/**/*.js --color; exit 0",
-    "purge": "rm -rf node_modules; npm cache clean; npm install"
+    "prestart": "npm run build",
+    "start": "./node_modules/.bin/serve ./bin",
+    "build": "npm test && ./node_modules/.bin/webpack --config ./build/webpack.prod.js --progress --colors",
+    "testBlah": "./node_modules/.bin/babel-node ./node_modules/.bin/isparta cover ./node_modules/.bin/_mocha -- --require ./test/setup.js --require ./node_modules/ignore-styles --recursive",
+    "pretest": "npm run test:lint",
+    "posttest": "npm run lint",
+    "test": "./node_modules/.bin/jest --verbose --color --watch",
+    "test:lint": "./node_modules/.bin/eslint . --color; exit 0",
+    "test:unit": "./node_modules/.bin/mocha ./src --compilers js:babel-register --recursive",
+    "test:coverage": "echo todo: coverage",
+    "dev": "./node_modules/.bin/webpack-dev-server --config ./build/webpack.dev.js --progress --inline --hot --open --colors --no-info",
+    "purge": "rm -rf node_modules; npm cache clean; npm install",
+    "shallow-test": "mocha --compilers js:babel-core/register --recursive --require ./test/setup.js  --require ./node_modules/ignore-styles",
+    "coverage": "open ./coverage/lcov-report/index.html"
   },
   "author": "Jordan Papaleo",
   "license": "",
   "devDependencies": {
     "babel-core": "6.14.0",
+    "babel-jest": "^15.0.0",
     "babel-loader": "6.2.5",
+    "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "6.14.0",
     "babel-preset-react": "6.11.1",
+    "babel-register": "^6.14.0",
     "chai": "3.5.0",
     "css-loader": "0.25.0",
     "enzyme": "2.4.1",
@@ -29,6 +38,7 @@
     "file-loader": "0.9.0",
     "html-loader": "0.4.3",
     "html-webpack-plugin": "2.22.0",
+    "jest-cli": "^15.1.1",
     "jsdom": "9.5.0",
     "json-loader": "0.5.4",
     "less": "2.7.1",
@@ -39,7 +49,7 @@
     "react-addons-test-utils": "^15.3.1",
     "redux-devtools": "3.3.1",
     "sass-loader": "4.0.2",
-    "serve": "^1.4.0",
+    "serve": "1.4.0",
     "standard": "8.0.0",
     "style-loader": "0.13.1",
     "webpack": "1.13.2",
