--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "npm test && ./node_modules/.bin/webpack --config ./build/webpack.prod.js --progress --colors",
     "testBlah": "./node_modules/.bin/babel-node ./node_modules/.bin/isparta cover ./node_modules/.bin/_mocha -- --require ./test/setup.js --require ./node_modules/ignore-styles --recursive",
     "pretest": "npm run test:lint",
-    "posttest": "npm run lint",
+    "posttest": "npm run test:coverage",
     "test": "./node_modules/.bin/jest --verbose --color --watch",
     "test:lint": "./node_modules/.bin/eslint . --color; exit 0",
     "test:unit": "./node_modules/.bin/mocha ./src --compilers js:babel-register --recursive",
@@ -28,7 +28,6 @@
     "babel-preset-es2015": "6.14.0",
     "babel-preset-react": "6.11.1",
     "babel-register": "^6.14.0",
-    "chai": "3.5.0",
     "css-loader": "0.25.0",
     "enzyme": "2.4.1",
     "eslint": "3.5.0",
@@ -39,14 +38,13 @@
     "html-loader": "0.4.3",
     "html-webpack-plugin": "2.22.0",
     "jest-cli": "^15.1.1",
-    "jsdom": "9.5.0",
     "json-loader": "0.5.4",
     "less": "2.7.1",
     "less-loader": "2.2.3",
-    "mocha": "3.0.2",
     "node-sass": "3.9.3",
     "raw-loader": "0.5.1",
     "react-addons-test-utils": "^15.3.1",
+    "react-test-renderer": "15.3.2",
     "redux-devtools": "3.3.1",
     "sass-loader": "4.0.2",
     "serve": "1.4.0",
@@ -58,9 +56,7 @@
   "dependencies": {
     "debug": "2.2.0",
     "moment": "2.14.1",
-    "object-assign": "4.1.0",
-    "promise": "7.1.1",
-    "react": "15.3.1",
+    "react": "15.3.2",
     "react-dom": "15.3.1",
     "react-redux": "4.4.5",
     "react-router": "2.8.0",
