redux sync tests working

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "testBlah": "./node_modules/.bin/babel-node ./node_modules/.bin/isparta cover ./node_modules/.bin/_mocha -- --require ./test/setup.js --require ./node_modules/ignore-styles --recursive",
     "pretest": "npm run test:lint",
     "posttest": "npm run test:coverage",
-    "test": "./node_modules/.bin/jest --verbose --color --watch",
+    "test": "./node_modules/.bin/jest --verbose --color",
+    "test:watch": "./node_modules/.bin/jest --verbose --color --watch",
     "test:lint": "./node_modules/.bin/eslint . --color; exit 0",
     "test:unit": "./node_modules/.bin/mocha ./src --compilers js:babel-register --recursive",
     "test:coverage": "echo todo: coverage",
