--- a/package.json
+++ b/package.json
@@ -6,18 +6,16 @@
     "prestart": "npm run build",
     "start": "./node_modules/.bin/serve ./bin",
     "build": "npm test && ./node_modules/.bin/webpack --config ./build/webpack.prod.js --progress --colors",
-    "testBlah": "./node_modules/.bin/babel-node ./node_modules/.bin/isparta cover ./node_modules/.bin/_mocha -- --require ./test/setup.js --require ./node_modules/ignore-styles --recursive",
+    "deploy": "sh ./build/build-prod.sh",
     "pretest": "npm run test:lint",
     "posttest": "npm run test:coverage",
     "test": "./node_modules/.bin/jest --verbose --color",
     "test:watch": "./node_modules/.bin/jest --verbose --color --watch",
     "test:lint": "./node_modules/.bin/eslint . --color; exit 0",
     "test:unit": "./node_modules/.bin/mocha ./src --compilers js:babel-register --recursive",
-    "test:coverage": "echo todo: coverage",
+    "test:coverage": "echo 'todo: coverage tests'",
     "dev": "./node_modules/.bin/webpack-dev-server --config ./build/webpack.dev.js --progress --inline --hot --open --colors --no-info",
-    "purge": "rm -rf node_modules; npm cache clean; npm install",
-    "shallow-test": "mocha --compilers js:babel-core/register --recursive --require ./test/setup.js  --require ./node_modules/ignore-styles",
-    "coverage": "open ./coverage/lcov-report/index.html"
+    "purge": "rm -rf node_modules; npm cache clean; npm install"
   },
   "author": "Jordan Papaleo",
   "license": "",
@@ -25,10 +23,10 @@
     "babel-core": "6.14.0",
     "babel-jest": "^15.0.0",
     "babel-loader": "6.2.5",
-    "babel-polyfill": "^6.13.0",
+    "babel-polyfill": "6.13.0",
     "babel-preset-es2015": "6.14.0",
     "babel-preset-react": "6.11.1",
-    "babel-register": "^6.14.0",
+    "babel-register": "6.14.0",
     "css-loader": "0.25.0",
     "enzyme": "2.4.1",
     "eslint": "3.5.0",
@@ -38,7 +36,7 @@
     "file-loader": "0.9.0",
     "html-loader": "0.4.3",
     "html-webpack-plugin": "2.22.0",
-    "jest-cli": "^15.1.1",
+    "jest-cli": "15.1.1",
     "json-loader": "0.5.4",
     "less": "2.7.1",
     "less-loader": "2.2.3",
@@ -55,6 +53,7 @@
     "webpack-dev-server": "1.15.1"
   },
   "dependencies": {
+    "axios": "0.14.0",
     "debug": "2.2.0",
     "moment": "2.14.1",
     "react": "15.3.2",
