--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
   "name": "zorroa-js-curator",
   "version": "0.1.1",
-  "description": "this is a front end template using react, redux, and webpack",
+  "description": "this is a front end template using react, redux, and webpack built by jordan with love",
   "scripts": {
     "prestart": "npm run build",
     "start": "./node_modules/.bin/serve ./bin",
     "build": "npm test && ./node_modules/.bin/webpack --config ./build/webpack.prod.js --progress --colors",
     "deploy": "sh ./build/build-prod.sh",
     "pretest": "npm run test:lint",
+    "test": "./node_modules/.bin/jest",
     "posttest": "npm run test:coverage",
-    "test": "./node_modules/.bin/jest --verbose --color",
-    "test:watch": "./node_modules/.bin/jest --verbose --color --watch",
+    "test:watch": "./node_modules/.bin/jest --verbose --watch",
     "test:lint": "./node_modules/.bin/eslint . --color; exit 0",
-    "test:unit": "./node_modules/.bin/mocha ./src --compilers js:babel-register --recursive",
     "test:coverage": "echo 'todo: coverage tests'",
     "dev": "./node_modules/.bin/webpack-dev-server --config ./build/webpack.dev.js --progress --inline --hot --open --colors --no-info",
     "purge": "rm -rf node_modules; npm cache clean; npm install"
@@ -21,7 +20,7 @@
   "license": "",
   "devDependencies": {
     "babel-core": "6.14.0",
-    "babel-jest": "^15.0.0",
+    "babel-jest": "15.0.0",
     "babel-loader": "6.2.5",
     "babel-polyfill": "6.13.0",
     "babel-preset-es2015": "6.14.0",
@@ -55,7 +54,6 @@
   "dependencies": {
     "axios": "0.14.0",
     "debug": "2.2.0",
-    "moment": "2.14.1",
     "react": "15.3.2",
     "react-dom": "15.3.1",
     "react-redux": "4.4.5",
@@ -64,7 +62,6 @@
     "redux": "3.6.0",
     "redux-multi": "0.1.12",
     "redux-promise": "0.5.3",
-    "redux-thunk": "2.1.0",
-    "whatwg-fetch": "1.0.0"
+    "redux-thunk": "2.1.0"
   }
 }
