--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test:watch": "./node_modules/.bin/jest --verbose --watch",
     "test:lint": "./node_modules/.bin/eslint . --color; exit 0",
     "test:coverage": "echo 'todo: coverage tests'",
-    "dev": "./node_modules/.bin/webpack-dev-server --config ./build/webpack.dev.js --progress --inline --hot --open --colors --no-info",
+    "dev": "./node_modules/.bin/webpack-dev-server --config ./build/webpack.dev.js --progress --inline --hot --colors --no-info --history-api-fallback",
     "purge": "rm -rf node_modules; npm cache clean; npm install"
   },
   "author": "Jordan Papaleo",
@@ -26,6 +26,7 @@
     "babel-preset-es2015": "6.14.0",
     "babel-preset-react": "6.11.1",
     "babel-register": "6.14.0",
+    "babel-preset-stage-1": "6.1.18",
     "css-loader": "0.25.0",
     "enzyme": "2.4.1",
     "eslint": "3.5.0",
@@ -41,7 +42,7 @@
     "less-loader": "2.2.3",
     "node-sass": "3.9.3",
     "raw-loader": "0.5.1",
-    "react-addons-test-utils": "^15.3.1",
+    "react-addons-test-utils": "15.3.1",
     "react-test-renderer": "15.3.2",
     "redux-devtools": "3.3.1",
     "sass-loader": "4.0.2",
@@ -54,12 +55,15 @@
   "dependencies": {
     "axios": "0.14.0",
     "debug": "2.2.0",
+    "nock": "8.0.0",
     "react": "15.3.2",
     "react-dom": "15.3.1",
     "react-redux": "4.4.5",
     "react-router": "2.8.0",
     "react-router-redux": "4.0.5",
     "redux": "3.6.0",
+    "redux-form": "6.0.5",
+    "redux-mock-store": "1.2.1",
     "redux-multi": "0.1.12",
     "redux-promise": "0.5.3",
     "redux-thunk": "2.1.0"
