--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
   "author": "Jordan Papaleo",
   "license": "",
   "devDependencies": {
+    "axios-mock-adapter": "^1.6.1",
     "babel-core": "6.14.0",
     "babel-jest": "15.0.0",
     "babel-loader": "6.2.5",
     "babel-polyfill": "6.13.0",
     "babel-preset-es2015": "6.14.0",
     "babel-preset-react": "6.11.1",
-    "babel-register": "6.14.0",
     "babel-preset-stage-1": "6.1.18",
+    "babel-register": "6.14.0",
     "css-loader": "0.25.0",
     "enzyme": "2.4.1",
     "eslint": "3.5.0",
@@ -61,7 +62,6 @@
   "dependencies": {
     "axios": "0.14.0",
     "debug": "2.2.0",
-    "nock": "8.0.0",
     "react": "15.3.2",
     "react-dom": "15.3.1",
     "react-redux": "4.4.5",
