--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
   },
   "dependencies": {
     "axios": "0.14.0",
+    "classnames": "2.2.5",
     "debug": "2.2.0",
     "react": "15.3.2",
     "react-dom": "15.3.1",
