--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-preset-react": "6.11.1",
     "babel-preset-stage-1": "6.1.18",
     "babel-register": "6.14.0",
+    "classnames": "2.2.5",
     "css-loader": "0.25.0",
     "enzyme": "2.4.1",
     "eslint": "3.5.0",
