Allow more test functions to suppress npm test errors.

--- a/.eslintrc
+++ b/.eslintrc
@@ -19,8 +19,10 @@
   "globals": {
     "describe": true,
     "it": true,
+    "xit": true,
     "expect": true,
     "beforeEach": true,
+    "afterEach": true,
     "React": true
   },
   "rules": {}
