--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-loader": "1.5.0",
     "eslint-plugin-react": "6.2.0",
     "file-loader": "0.9.0",
+    "fsevents": "^1.0.14",
     "html-loader": "0.4.3",
     "html-webpack-plugin": "2.22.0",
     "jest-cli": "15.1.1",
