--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react": "15.3.2",
     "react-addons-css-transition-group": "15.3.2",
     "react-dom": "15.3.1",
+    "react-measure": "1.2.0",
     "react-redux": "4.4.5",
     "react-router": "2.8.0",
     "redux": "3.6.0",
