--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "classnames": "2.2.5",
     "debug": "2.2.0",
     "react": "15.3.2",
-    "react-addons-css-transition-group": "^15.3.2",
+    "react-addons-css-transition-group": "15.3.2",
     "react-dom": "15.3.1",
     "react-redux": "4.4.5",
     "react-router": "2.8.0",
