david/debug: Update for DEBUG & PROD globals so they work & pass lint (#86)
* Update #ifdef DEBUG [Finishes #133195341]

* Fix for failing tests

--- a/.eslintrc
+++ b/.eslintrc
@@ -24,7 +24,9 @@
     "expect": true,
     "beforeEach": true,
     "afterEach": true,
-    "React": true
+    "React": true,
+    "DEBUG": true,
+    "PROD": true
   },
   "rules": {}
 }
