Add a build-only npm run rule to test packaging without running tests

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "postinstall": "rm -rf bin; npm run build",
     "start": "./node_modules/.bin/serve ./bin",
     "dev": "./node_modules/.bin/webpack-dev-server --config ./build/webpack.dev.js --progress --inline --hot --colors --no-info --history-api-fallback",
-    "build": "npm test && ./node_modules/.bin/webpack --config ./build/webpack.prod.js --progress --colors",
+    "build-only": "./node_modules/.bin/webpack --config ./build/webpack.prod.js --progress --colors",
+    "build": "npm test && npm run build-only",
     "deploy": "sh ./build/build-prod.sh",
     "pretest": "npm run test:lint",
     "test": "./node_modules/.bin/jest",
