Flatten folders in the DOM & app state schema
This was done primarily to enable implementation of the design:
  - Zebra-striping using CSS isn't possible with a hierarchy of elements
This also simplifies the in-memory data structure, and allows
us to group app of the folders app state into Folders.js
(not have to pass data through folder children in order to store
folder open & selection state)

Put the top level Collapsibles in Workspace for folders
Store collapsible open state & sidebar open state in Workspace
Removing isIconified from some components -- it's only needed at the top level
Rename selectedIds to selectedFolderIds (removes some conflict between asset & folder selections)
Update folder selection
Add folder UI state
Add Metadata UI state
Add new folder UI styling
Add Toggle Folder action
Move folder filtering from implicit inside reducer to explicit declared at Workspace level
Switch tracking of open folders to a top level set openFolderIds, to mirror selectedIds
Folder child ids handling, preserve grandchildren when updating a folder's children
Update folderReducer.test.js for new folder state schema

Tweak: shorten folder new/del button names
Tweak: Fix CollapsibleHeader text clamping
Tweak: relax whitespace eslint rules
Tweak: De-lint

--- a/.eslintrc
+++ b/.eslintrc
@@ -28,5 +28,13 @@
     "DEBUG": true,
     "PROD": true
   },
-  "rules": {}
+  "rules": {
+    // NB: Only disabling rules that have no effect on code safety
+    "comma-spacing": 0,
+    "key-spacing": 0,
+    "no-multi-spaces": 0,
+    "no-multiple-empty-lines": 0,
+    "standard/array-bracket-even-spacing": 0,
+    "standard/object-curly-even-spacing": 0
+  }
 }
