--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "node-sass": "3.9.3",
     "raw-loader": "0.5.1",
     "react-addons-test-utils": "15.3.1",
+    "react-mapbox-gl": "0.17.0",
     "react-test-renderer": "15.3.2",
     "redux-devtools": "3.3.1",
     "sass-loader": "4.0.2",
