--- a/package.json
+++ b/package.json
@@ -78,6 +78,8 @@
     "react-dom": "15.3.1",
     "react-keydown": "1.6.3",
     "react-measure": "1.2.0",
+    "react-pdf-js": "1.0.31",
+    "react-player": "0.12.0",
     "react-redux": "4.4.5",
     "react-router": "2.8.0",
     "redux": "3.6.0",
