--- a/package.json
+++ b/package.json
@@ -58,7 +58,7 @@
     "less-loader": "2.2.3",
     "node-sass": "3.9.3",
     "raw-loader": "0.5.1",
-    "react-addons-test-utils": "15.3.1",
+    "react-addons-test-utils": "15.4.0",
     "react-mapbox-gl": "0.17.0",
     "react-test-renderer": "15.3.2",
     "redux-devtools": "3.3.1",
@@ -73,15 +73,16 @@
     "axios": "0.14.0",
     "classnames": "2.2.5",
     "debug": "2.2.0",
-    "react": "15.3.2",
+    "react": "15.4.0",
     "react-addons-css-transition-group": "15.3.2",
-    "react-dom": "15.3.1",
+    "react-dom": "15.4.0",
     "react-keydown": "1.6.3",
     "react-measure": "1.2.0",
     "react-pdf-js": "1.0.31",
     "react-player": "0.12.0",
     "react-redux": "4.4.5",
     "react-router": "2.8.0",
+    "recharts": "0.18.0",
     "redux": "3.6.0",
     "redux-form": "6.0.5",
     "redux-mock-store": "1.2.1",
