--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,19 @@ language: node_js
 node_js:
   - "6"
 
+bundler_args: --retry 1
+
 notifications:
   slack: zorroa:U0489fQGuSPls5EZZfSUoGsL
 
+addons:
+  sauce_connect: true
+
+env:
+  global:
+    - SAUCE_USERNAME: "danwexler"
+    - SAUCE_ACCESS_KEY: "64400a01-0dc8-41b8-b2ed-d58f3911efe5"
+
+before_script:
+  - npm run dev &
+  - (while ! nc -z localhost 8080; do sleep 1; done); curl -s localhost:8080 > /dev/null; echo SERVER UP
