--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.1",
   "description": "this is a front end template using react, redux, and webpack built by jordan with love",
   "scripts": {
-    "postinstall": "rm -rf bin; npm run build",
+    "post-install": "rm -rf bin; npm run build",
     "start": "./node_modules/.bin/serve ./bin -p 8080",
     "dev": "./node_modules/.bin/webpack-dev-server --config ./build/webpack.dev.js --progress --inline --hot --colors --no-info --history-api-fallback",
     "build-only": "./node_modules/.bin/webpack --config ./build/webpack.prod.js --progress --colors",
@@ -51,6 +51,7 @@
     "eslint-loader": "1.5.0",
     "eslint-plugin-react": "6.2.0",
     "file-loader": "0.9.0",
+    "geckodriver": "1.2.0",
     "html-loader": "0.4.3",
     "html-webpack-plugin": "2.22.0",
     "jest-cli": "15.1.1",
@@ -65,6 +66,7 @@
     "react-test-renderer": "15.3.2",
     "redux-devtools": "3.3.1",
     "sass-loader": "4.0.2",
+    "saucelabs": "1.3.0",
     "selenium-webdriver": "3.0.1",
     "serve": "1.4.0",
     "standard": "8.0.0",
