Add update-fonts to fully automate new versions of zorroa-icons.zip from Amber (#157)
* Add update-fonts to fully automate new versions of zorroa-icons.zip from Amber

* Go back to original branch after updating fonts

* Fix comments

* Assume less about the path & current branch; add explicit branch flags to hub command; update some comments

* Make update-fonts.bash less error prone

Create & checkout branch before unzipping fonts
push zorroa-icons to origin:zorroa-icons explicitly
Force push zorroa-icons branch
Fix hub PR flag order & merge PR to master (origin/master doesn't fly)
Force create zorroa-icons branch;
  no reason to error if branch zorroa-icons already exists
Add a blank line to output so Note is more visible

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "test:e2e": "./node_modules/.bin/jest ./tests/e2e/homePage.test.js",
     "test:lint": "./node_modules/.bin/eslint . --color; exit 0",
     "test:coverage": "npm test; ./node_modules/.bin/serve ./coverage/lcov-report & open http://localhost:8080",
-    "purge": "rm -rf node_modules; npm cache clean; npm install"
+    "purge": "rm -rf node_modules; npm cache clean; npm install",
+    "update-fonts": "src/assets/fonts/zorroa-icons/update-fonts.bash"
   },
   "author": "Jordan Papaleo",
   "license": "",
