Add a PRODLOCAL build config (#210)
* Add a PRODLOCAL build config

Allows testing using PROD build settings with remote archivist servers

* Fix occasional JS error I'm seeing in the console

* Update README with description of PRODLOCAL build config

--- a/.eslintrc
+++ b/.eslintrc
@@ -28,7 +28,8 @@
     "afterEach": true,
     "React": true,
     "DEBUG": true,
-    "PROD": true
+    "PROD": true,
+    "PRODLOCAL": true
   },
   "rules": {}
 }
