--- a/.eslintrc
+++ b/.eslintrc
@@ -21,11 +21,15 @@
     "jest": true,
     "describe": true,
     "jasmine": true,
+    "jasmineRequire": true,
     "it": true,
+    "fit": true,
     "xit": true,
     "expect": true,
     "beforeEach": true,
     "afterEach": true,
+    "beforeAll": true,
+    "afterAll": true,
     "React": true,
     "DEBUG": true,
     "PROD": true,
