--- a/.editorconfig
+++ b/.editorconfig
@@ -11,3 +11,8 @@ charset = utf-8
 
 [*.{js,jsx,html,css,less,scss}]
 # indent_size = 4
+
+# shell scripts *require* mixed tab/spaces support
+[*.sh]
+indent_style = none
+indent_size = 0
