--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "axios": "0.14.0",
     "classnames": "2.2.5",
     "debug": "2.2.0",
+    "moment": "2.17.1",
     "react": "15.4.2",
     "react-addons-css-transition-group": "15.3.2",
     "react-dom": "15.4.2",
@@ -91,6 +92,7 @@
     "react-player": "0.12.0",
     "react-redux": "4.4.5",
     "react-router": "2.8.0",
+    "react-widgets": "3.4.5",
     "recharts": "0.18.0",
     "redux": "3.6.0",
     "redux-form": "6.0.5",
