--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "copy-to-clipboard": "3.0.5",
     "debug": "2.2.0",
     "moment": "2.17.1",
+    "latlon-geohash": "1.1.0",
     "react": "15.4.2",
     "react-addons-css-transition-group": "15.3.2",
     "react-dom": "15.4.2",
