Add version number to build info

--- a/.eslintrc
+++ b/.eslintrc
@@ -38,7 +38,8 @@
     "zvCommit": true,
     "zvCount": true,
     "zvDateStr": true,
-    "zvDateMs": true
+    "zvDateMs": true,
+    "zvVersion": true
   },
   "rules": {}
 }
