Change menu item to Send Feedback. Fix eslintrc merge error.

--- a/.eslintrc
+++ b/.eslintrc
@@ -39,7 +39,7 @@
     "zvCount": true,
     "zvDateStr": true,
     "zvDateMs": true,
-    "zvVersion": true
+    "zvVersion": true,
     "emailjs": true
   },
   "rules": {}
