--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
   "dependencies": {
     "axios": "0.14.0",
     "classnames": "2.2.5",
+    "copy-to-clipboard": "3.0.5",
     "debug": "2.2.0",
     "moment": "2.17.1",
     "react": "15.4.2",
