Make curator detect a stale version number (for long running sessions) (#357)
* Add a /version.html route to display curator version

Add a build-dev step
Add handlebars for templating

* Reload on version change

* Show version number when hovering over the logo

* Show a reload bar when version is stale

* Delint

* Re-run shrinkwrap

* Fix Header & Logo tests; they use the zvVersion macro

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "post-install": "rm -rf bin; npm run build",
     "start": "./node_modules/.bin/serve ./bin -p 8080",
     "dev": "./node_modules/.bin/webpack-dev-server --config ./build/webpack.dev.js --progress --inline --hot --colors --no-info --history-api-fallback",
+    "build-dev": "./node_modules/.bin/webpack --config ./build/webpack.dev.js --progress --colors",
     "build-only": "./node_modules/.bin/webpack --config ./build/webpack.prod.js --progress --colors",
     "build-prodlocal": "./node_modules/.bin/webpack --config ./build/webpack.prodlocal.js --progress --colors",
     "build": "npm test && npm run build-only",
@@ -55,6 +56,7 @@
     "eslint-plugin-react": "6.2.0",
     "file-loader": "0.9.0",
     "geckodriver": "1.2.0",
+    "handlebars-webpack-plugin": "0.1.1",
     "html-loader": "0.4.3",
     "html-webpack-plugin": "2.22.0",
     "jest-cli": "18.1.0",
