--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "axios-mock-adapter": "1.6.1",
+    "babel-cli": "6.24.0",
     "babel-core": "6.14.0",
     "babel-eslint": "7.0.0",
     "babel-jest": "16.0.0",
@@ -44,6 +45,7 @@
     "babel-plugin-transform-decorators-legacy": "1.3.4",
     "babel-polyfill": "6.13.0",
     "babel-preset-es2015": "6.14.0",
+    "babel-preset-node6": "11.0.0",
     "babel-preset-react": "6.11.1",
     "babel-preset-stage-1": "6.1.18",
     "babel-register": "6.14.0",
