--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "zorroa-js-curator",
   "version": "0.2.3",
   "description": "this is a front end template using react, redux, and webpack built by jordan with love",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Zorroa/zorroa-js-curator.git"
+  },
   "scripts": {
     "post-install": "rm -rf bin; npm run build",
     "start": "./node_modules/.bin/serve ./bin -p 8080",
