--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test": "./node_modules/.bin/jest -i",
     "test:watch": "./node_modules/.bin/jest --verbose --watch",
     "test:e2e": "./node_modules/.bin/jest e2e",
-    "test:lint": "./node_modules/.bin/eslint . --color; exit 0",
+    "test:lint": "./node_modules/.bin/eslint src --color; exit 0",
     "test:coverage": "npm test; ./node_modules/.bin/serve ./coverage/lcov-report & open http://localhost:8080",
     "purge": "rm -rf node_modules; npm cache clean; npm install",
     "update-fonts": "src/assets/fonts/zorroa-icons/update-fonts.bash",
@@ -41,7 +41,7 @@
   "devDependencies": {
     "axios-mock-adapter": "1.6.1",
     "babel-core": "6.14.0",
-    "babel-eslint": "7.0.0",
+    "babel-eslint": "7.2.1",
     "babel-jest": "16.0.0",
     "babel-loader": "6.2.5",
     "babel-plugin-transform-class-properties": "6.11.5",
@@ -54,10 +54,10 @@
     "chromedriver": "2.25.1",
     "css-loader": "0.25.0",
     "enzyme": "2.4.1",
-    "eslint": "3.5.0",
-    "eslint-config-standard": "6.0.0",
-    "eslint-loader": "1.5.0",
-    "eslint-plugin-react": "6.2.0",
+    "eslint": "3.18.0",
+    "eslint-config-standard": "6.2.1",
+    "eslint-loader": "1.7.0",
+    "eslint-plugin-react": "6.10.3",
     "file-loader": "0.9.0",
     "geckodriver": "1.2.0",
     "handlebars-webpack-plugin": "0.1.1",
@@ -91,6 +91,7 @@
     "debug": "2.2.0",
     "moment": "2.17.1",
     "latlon-geohash": "1.1.0",
+    "nightwatch": "0.9.14",
     "react": "15.4.2",
     "react-addons-css-transition-group": "15.3.2",
     "react-dom": "15.4.2",
