--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "react": "15.4.2",
     "react-addons-css-transition-group": "15.3.2",
     "react-dom": "15.4.2",
+    "react-json-tree": "0.10.7",
     "react-keydown": "1.6.3",
     "react-measure": "1.2.0",
     "react-pdf-js": "1.0.33",
