--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "classnames": "2.2.5",
     "copy-to-clipboard": "3.0.5",
     "debug": "2.2.0",
+    "dropbox": "2.5.2",
     "latlon-geohash": "1.1.0",
     "moment": "2.17.1",
     "nightwatch": "0.9.14",
