--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "eslint": "3.18.0",
     "eslint-config-standard": "6.2.1",
     "eslint-loader": "1.7.0",
+    "eslint-plugin-promise": "3.5.0",
     "eslint-plugin-react": "6.10.3",
     "file-loader": "0.9.0",
     "geckodriver": "1.2.0",
@@ -70,7 +71,6 @@
     "json-loader": "0.5.4",
     "less": "2.7.1",
     "less-loader": "2.2.3",
-    "nightwatch": "^0.9.5",
     "node-sass": "3.9.3",
     "raw-loader": "0.5.1",
     "react-addons-test-utils": "15.4.2",
