--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "debug": "2.2.0",
     "dropbox": "2.5.2",
     "latlon-geohash": "1.1.0",
+    "lru-cache": "4.0.2",
     "moment": "2.17.1",
     "nightwatch": "0.9.14",
     "react": "15.4.2",
