--- a/package.json
+++ b/package.json
@@ -106,14 +106,12 @@
     "react-player": "0.12.0",
     "react-redux": "4.4.5",
     "react-router": "2.8.0",
-    "react-slick": "0.14.11",
     "react-widgets": "3.4.5",
     "recharts": "0.18.0",
     "redux": "3.6.0",
     "redux-mock-store": "1.2.1",
     "redux-multi": "0.1.12",
     "redux-promise": "0.5.3",
-    "redux-thunk": "2.1.0",
-    "slick-carousel": "1.6.0"
+    "redux-thunk": "2.1.0"
   }
 }
