Allow Selenium tests to run in parallel
Not working quite yet, Travis isn't launching parallel processes
Remove -i flag from jest. -i forces sequential tests, no -i runs in parallel
Log the travis job number
Use Travis' Precise 7.5GB nodes

I've been checking the logs for the failed build that you shared with us, #3342,
and I can see that there's a trace of a process being killed at line 3195,
and then zorroa-js-curator is exiting with the error code 137.

Error code 137 means your process got killed by the Linux out-of-memory killer.
I see that your builds are running on our container-based infrastructure which only has
4GB of RAM. I think I would suggest you to rather run your builds on our
sudo-enabled Precise infrastructure which has 7.5GB of RAM. Here's what you need to add
to your .travis.yml file to route your builds over there:

sudo: required
dist: precise

Can you give this a try and let us know if it helps?

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ notifications:
 addons:
   sauce_connect: true
 
+sudo: required
+dist: precise
+
 env:
   global:
     # # parent Sauce Labs account credentials
