--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ bundler_args: --retry 2
 notifications:
   slack: zorroa:U0489fQGuSPls5EZZfSUoGsL
 
-addons:
-  sauce_connect: false
+# addons:
+#   sauce_connect: false
 
 sudo: required
 dist: precise
