--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "nightwatch": "0.9.14",
     "react": "15.4.2",
     "react-addons-css-transition-group": "15.3.2",
+    "react-axis": "0.2.2",
     "react-dom": "15.4.2",
     "react-json-tree": "0.10.7",
     "react-keydown": "1.6.3",
