--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "lru-cache": "4.0.2",
     "moment": "2.17.1",
     "nightwatch": "0.9.14",
+    "pondjs": "0.8.7",
     "react": "15.4.2",
     "react-addons-css-transition-group": "15.3.2",
     "react-axis": "0.2.2",
@@ -109,6 +110,7 @@
     "react-player": "0.12.0",
     "react-redux": "4.4.5",
     "react-router": "2.8.0",
+    "react-timeseries-charts": "0.12.8",
     "react-widgets": "3.4.5",
     "recharts": "0.18.0",
     "redux": "3.6.0",
