--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ bundler_args: --retry 2
 notifications:
   slack: zorroa:U0489fQGuSPls5EZZfSUoGsL
 
-sudo: required
-dist: precise
+# sudo: required
+# dist: precise
 
 
 # Uncomment these sections to default to using Sauce Labs for Travis tests
