--- a/package.json
+++ b/package.json
@@ -50,8 +50,7 @@
     "babel-plugin-transform-class-properties": "^6.11.5",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-polyfill": "^6.13.0",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-node6": "^11.0.0",
+    "babel-preset-env": "1.6.1",
     "babel-preset-react": "^6.11.1",
     "babel-preset-stage-1": "^6.1.18",
     "babel-register": "^6.14.0",
