--- a/package.json
+++ b/package.json
@@ -42,71 +42,73 @@
     "collectCoverage": true
   },
   "devDependencies": {
-    "axios-mock-adapter": "^1.6.1",
-    "babel-cli": "^6.24.0",
-    "babel-core": "^6.14.0",
-    "babel-eslint": "^7.2.1",
-    "babel-jest": "^16.0.0",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-transform-class-properties": "^6.11.5",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-polyfill": "^6.13.0",
+    "axios-mock-adapter": "1.9.0",
+    "babel-cli": "6.26.0",
+    "babel-core": "6.26.0",
+    "babel-eslint": "7.2.3",
+    "babel-jest": "16.0.0",
+    "babel-loader": "6.4.1",
+    "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-plugin-transform-decorators-legacy": "1.3.4",
+    "babel-polyfill": "6.26.0",
     "babel-preset-env": "1.6.1",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-1": "^6.1.18",
-    "babel-register": "^6.14.0",
-    "chromedriver": "^2.33.1",
-    "css-loader": "^0.25.0",
-    "enzyme": "^2.4.1",
-    "eslint": "^3.18.0",
-    "eslint-config-standard": "^6.2.1",
-    "eslint-loader": "^1.7.0",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-react": "^6.10.3",
-    "file-loader": "^0.9.0",
-    "handlebars-webpack-plugin": "^0.1.1",
-    "html-loader": "^0.4.3",
-    "html-webpack-plugin": "^2.22.0",
-    "jest-cli": "^18.1.0",
-    "json": "^9.0.4",
-    "json-loader": "^0.5.4",
-    "less": "^2.7.1",
-    "less-loader": "^2.2.3",
-    "raw-loader": "^0.5.1",
-    "react-mapbox-gl": "^0.17.0",
-    "react-test-renderer": "^15.3.2",
-    "sass-loader": "^4.0.2",
-    "selenium-webdriver": "^3.3.0",
-    "serve": "^1.4.0",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.16.2"
+    "babel-preset-react": "6.24.1",
+    "babel-preset-stage-1": "6.24.1",
+    "babel-register": "6.26.0",
+    "chromedriver": "2.33.1",
+    "css-loader": "0.25.0",
+    "enzyme": "2.9.1",
+    "eslint": "3.19.0",
+    "eslint-config-standard": "6.2.1",
+    "eslint-loader": "1.9.0",
+    "eslint-plugin-promise": "3.6.0",
+    "eslint-plugin-react": "6.10.3",
+    "eslint-plugin-standard": "2.3.1",
+    "file-loader": "0.9.0",
+    "handlebars-webpack-plugin": "0.1.1",
+    "html-loader": "0.4.5",
+    "html-webpack-plugin": "2.30.1",
+    "jest-cli": "18.1.0",
+    "json": "9.0.6",
+    "json-loader": "0.5.7",
+    "less": "2.7.2",
+    "less-loader": "2.2.3",
+    "node-sass": "3.13.1",
+    "raw-loader": "0.5.1",
+    "react-mapbox-gl": "0.17.0",
+    "react-test-renderer": "15.6.2",
+    "sass-loader": "4.1.1",
+    "selenium-webdriver": "3.6.0",
+    "serve": "1.4.0",
+    "style-loader": "0.13.2",
+    "webpack": "1.15.0",
+    "webpack-dev-server": "1.16.5"
   },
   "dependencies": {
-    "axios": "^0.14.0",
-    "classnames": "^2.2.5",
-    "copy-to-clipboard": "^3.0.5",
-    "debug": "^2.2.0",
-    "dropbox": "^2.5.2",
-    "latlon-geohash": "^1.1.0",
-    "lru-cache": "^4.0.2",
-    "moment": "^2.17.1",
-    "react": "^15.4.2",
-    "react-addons-css-transition-group": "^15.3.2",
-    "react-axis": "^0.2.2",
-    "react-dom": "^15.4.2",
-    "react-json-tree": "^0.10.7",
-    "react-keydown": "^1.6.3",
-    "react-measure": "^1.2.0",
-    "react-pdf-js": "^1.0.33",
-    "react-redux": "^4.4.5",
-    "react-router": "^2.8.0",
-    "react-widgets": "^3.4.5",
-    "recharts": "^0.18.0",
-    "redux": "^3.6.0",
-    "redux-mock-store": "^1.2.1",
-    "redux-multi": "^0.1.12",
-    "redux-promise": "^0.5.3",
-    "redux-thunk": "^2.1.0"
+    "axios": "0.14.0",
+    "classnames": "2.2.5",
+    "copy-to-clipboard": "3.0.8",
+    "debug": "2.6.9",
+    "dropbox": "2.5.12",
+    "latlon-geohash": "1.1.0",
+    "lru-cache": "4.1.1",
+    "moment": "2.19.1",
+    "react": "15.6.2",
+    "react-addons-css-transition-group": "15.6.2",
+    "react-axis": "0.2.5",
+    "react-dom": "15.6.2",
+    "react-json-tree": "0.10.9",
+    "react-keydown": "1.9.4",
+    "react-measure": "1.4.7",
+    "react-pdf-js": "1.0.37",
+    "react-redux": "4.4.8",
+    "react-router": "2.8.1",
+    "react-widgets": "3.5.0",
+    "recharts": "0.18.0",
+    "redux": "3.7.2",
+    "redux-mock-store": "1.3.0",
+    "redux-multi": "0.1.12",
+    "redux-promise": "0.5.3",
+    "redux-thunk": "2.2.0"
   }
 }
