Add ability to list, create, edit and delete users (#668)
* Snapshot

* Snapshot

* Snapshot commit

* Snapshot

* Snapshot

* Snapshot

* Snapshot

* Cleanup sources of log spam

* Extra password confirm field

* Make color usages clearer

* Use latest color palette

* Enable selection and de-selection of users

* Add login counts and login date

* Better user toggle UX

* Revert "Cleanup sources of log spam"

This reverts commit e17c483df384a323b3967b8da24d49fb567bd674.

* Snapshot

* Tweaking for feedback

* Back out package changes

* Fix up the design of check marks

* Colors

* Fix the size of the sidebar

* Use correct spaing

* Address addressable UI feedback

* Maybe make the tests work

* Experiment to remove extranous test paths

* Revert "Experiment to remove extranous test paths"

This reverts commit b0c1c95a2e5f96e4b9b3cca5af59e154249f9330.

* Include the home folder ID

* Make unused variables and arguments a problem

* Fix instances of unused variables

* UX Tweaks

* Make the data table look a little nicer

* Allow for more diversity in table look + feel

* ENable underlay clicks to hide modal

* Quick fix for legacy color contrast

--- a/.eslintrc
+++ b/.eslintrc
@@ -42,5 +42,14 @@
     "zvVersion": true,
     "emailjs": true
   },
-  "rules": {}
+  "rules": {
+    "no-unused-vars": [
+      "error", {
+        "vars": "all",
+        "args": "after-used",
+        "argsIgnorePattern": "_|event|response",
+        "ignoreRestSiblings": false
+      }
+    ]
+  }
 }
