EVI-216: Allow navigation to lightbox (#720)
* Checkpoint commit

Enable the Lightbox to be a routable page

* Better handle search errors

* Update deps

--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "less-loader": "2.2.3",
     "node-sass": "3.13.1",
     "npm": "5.8.0",
+    "pdfjs-dist": "1.10.97",
     "prettier": "1.10.2",
     "raw-loader": "0.5.1",
     "react-mapbox-gl": "0.17.0",
@@ -113,9 +114,9 @@
     "latlon-geohash": "1.1.0",
     "lru-cache": "4.1.1",
     "moment": "2.21.0",
-    "pdfjs-dist": "1.10.97",
     "react": "15.6.2",
     "react-addons-css-transition-group": "15.6.2",
+    "react-addons-transition-group": "15.6.2",
     "react-axis": "0.2.5",
     "react-dom": "15.6.2",
     "react-json-tree": "0.10.9",
@@ -123,7 +124,7 @@
     "react-masonry-component": "6.0.2",
     "react-measure": "1.4.7",
     "react-redux": "4.4.8",
-    "react-router": "2.8.1",
+    "react-router-dom": "4.2.2",
     "react-widgets": "3.5.0",
     "recharts": "0.18.0",
     "redux": "3.7.2",
