Only run lint, unit and functional tests, remove Selenium tests (#755)

--- a/package.json
+++ b/package.json
@@ -18,10 +18,9 @@
     "build": "npm test && npm run build-only",
     "deploy": "sh ./build/build-prod.sh",
     "pretest": "npm run test:lint",
-    "test": "tests/selenium/runNpmTest.sh",
-    "test:watch": "./node_modules/.bin/jest --verbose --watch",
-    "test:e2e": "./node_modules/.bin/jest e2e",
-    "test:lint": "./node_modules/.bin/eslint src --color; exit 0",
+    "test": "$(npm bin)/jest src/**/*.test.js",
+    "test:watch": "$(npm bin)/jest src/**/*.test.js --verbose --watch",
+    "test:lint": "$(npm bin)/eslint src --color",
     "test:coverage": "npm test; ./node_modules/.bin/serve ./coverage/lcov-report & open http://localhost:8080",
     "purge": "rm -rf node_modules; npm cache clean; npm install",
     "update-fonts": "src/assets/fonts/zorroa-icons/update-fonts.bash",
