EVI-334: Enable metadata tables to be shared (#768)
* Basic implementation of the shared metadata UI

* Checkpoint commit

* add test cases for layout model

* Add an indicator of field name

* Finish desinging metadata fields

* Checkpoint commit

* COrrectly handle exisiting layouts

* Handle share table saving

* Add success and error messages

* Add support for deleting layouts

* Clean up after deletion

--- a/package.json
+++ b/package.json
@@ -103,6 +103,7 @@
   },
   "dependencies": {
     "axios": "0.14.0",
+    "camelcase": "5.0.0",
     "classnames": "2.2.5",
     "copy-to-clipboard": "3.0.8",
     "debug": "2.6.9",
