EVI-531: Update Curator to work in a GCP environment (#776)
* Add a basic webserver to proxy requests

* Test configuration options

* Upgrade lock files

* Utilize default HTTP port

* Use env variables for port

* Use env variables for port

* Remove NPM

* Use port 8080 as used in examples

* Add back version

* General code cleanup

* Use Node 8, avoid running dev mode on CI

* Attempt to use node_modules cache for faster builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,12 @@
 language: node_js
 node_js:
-  - "6"
+  - "8"
 
 bundler_args: --retry 2
 
 notifications:
   slack: zorroa:U0489fQGuSPls5EZZfSUoGsL
 
-# sudo: required
-# dist: precise
-
-
-# Uncomment these sections to default to using Sauce Labs for Travis tests
-# Don't forget to adjust runNpmTest.sh too
-
-# addons:
-#   sauce_connect: true
-
-# env:
-#   global:
-#     - SAUCE_USERNAME: "zorroasauce"
-#     - SAUCE_ACCESS_KEY: "f6c35e63-e19a-4575-be77-b49748e98bd6"
-
-
-before_script:
-  - npm run dev &
-  - (while ! nc -z localhost 8081; do sleep 1; done); curl -s localhost:8081 > /dev/null; echo SERVER UP
+cache:
+  directories:
+    - node_modules
