Lint and test code in all directories: (#780)

--- a/package.json
+++ b/package.json
@@ -18,13 +18,10 @@
     "build-prodlocal": "./node_modules/.bin/webpack --config ./build/webpack.prodlocal.js --progress --colors",
     "build": "npm test && npm run build-only",
     "deploy": "sh ./build/build-prod.sh",
-    "test": "npm run test:client && npm run test:server",
+    "test": "npm run test:lint && npm run test:unit",
     "test:watch": "$(npm bin)/jest src/**/*.test.js --verbose --watch",
-    "test:client": "npm run test:client:lint && npm run test:client:unit",
-    "test:server": "npm run test:server:lint",
-    "test:client:lint": "$(npm bin)/eslint src --color",
-    "test:client:unit": "$(npm bin)/jest src/**/*.test.js",
-    "test:server:lint": "$(npm bin)/eslint server --color",
+    "test:lint": "$(npm bin)/eslint ./",
+    "test:unit": "$(npm bin)/jest",
     "purge": "rm -rf node_modules; npm cache clean; npm install",
     "update-fonts": "src/assets/fonts/zorroa-icons/update-fonts.bash",
     "preview-fonts": "src/assets/fonts/zorroa-icons/preview-fonts.bash"
