EVI-496, 	EVI-497,  EVI-647, EVI-652, EVI-827: Flipbook navigation enhancements  (#813)
* Checkpoint commit

* Remove global API calls that only exisisted for Selenium tests

* Remove history from Assets

* Add tests for the zero state

* Add tests for the assets footer

* Move the AssetCounter to the Header

* Basic tests for Assets.js

* Remove MapBoxGL

* Add tests for Assets.js

* Open Flipbook widget when clicking on FLipbook icon

* Clean up footer CSS alignment issue

* Checkpouint commit: undoing all history managment logic

* Prevent warnings in console

* Bring back the crufty history navigation

* Refactor WidgetInfo so that individual widgets can be tested

* Fix linting problems

* Mock global functions

* Remove broken feature for closing multipage widgets

* Add basic parts of a Flipbook to the multipage widget

* Massage the Multipage widget to look like the FLipbook widget

* Add tests for FPS toggle bar

* Test map state to props

* Use proper terminology

* Define test properly

* Update snapshots

* Save and load history as component is remounted

* Change first call

* Code cleanup

* Fix tests to work with newest version of Jest

* Fix unit tests

* Remove unused Flipbook code

* Fix layout problems

* Set the parent as the default frame

--- a/package.json
+++ b/package.json
@@ -35,6 +35,10 @@
   },
   "jest": {
     "testURL": "https://localhost/8081",
+    "testEnvironment": "jsdom",
+    "setupFiles": [
+      "jest-localstorage-mock"
+    ],
     "moduleNameMapper": {
       "^.+\\.(css|less|scss)$": "<rootDir>/tests/StyleStub.js",
       "^.+\\.(jpg|png|jpeg|svg)$": "<rootDir>/tests/MediaStub.js"
@@ -85,6 +89,7 @@
     "husky": "0.14.3",
     "install": "0.11.0",
     "jest-cli": "^23.0.0",
+    "jest-localstorage-mock": "2.2.0",
     "json": "9.0.6",
     "json-loader": "0.5.7",
     "less": "2.7.2",
@@ -93,7 +98,6 @@
     "pdfjs-dist": "1.10.97",
     "prettier": "1.10.2",
     "raw-loader": "0.5.1",
-    "react-mapbox-gl": "0.17.0",
     "react-test-renderer": "15.6.2",
     "sass-loader": "4.1.1",
     "style-loader": "0.13.2",
