EVI-847: Enable the Curator to be served from Docker (#841)
* EVI-847: Enable the Curator to be served from Docker

* Checkpoint

* Better redirect logic

--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
   },
   "scripts": {
     "prepush": "npm test",
-    "post-install": "rm -rf bin; npm run build",
-    "start": "node ./server/app.js",
+    "start": "$(npm bin)/forever -f ./server/app.js",
+    "start:docker": "docker run -p 80:8081 -p 443:8443 -e 'NODE_ENV=production' -e WHITELABEL_CONFIGURATION -e ARCHIVIST_API_URL --init -u node -m 1g --memory-swap 4g zorroa-js-curator",
     "dev": "./node_modules/.bin/webpack-dev-server --config ./build/webpack.dev.js --progress --inline --hot --colors --no-info --history-api-fallback",
     "dev-https": "./node_modules/.bin/webpack-dev-server --config ./build/webpack.dev.js --progress --inline --hot --colors --no-info --history-api-fallback --https --cert ./cert.pem --key ./key.pem # this is for safari testing",
     "dev-https-cert": "openssl req -x509 -newkey rsa:4096 -keyout key.pem -out cert.pem -days 365 -nodes -subj '/CN=localhost'",
     "build-dev": "./node_modules/.bin/webpack --config ./build/webpack.dev.js --progress --colors",
+    "build-docker": "docker build -m 4g -t zorroa-js-curator .",
     "build-prodlocal": "./node_modules/.bin/webpack --config ./build/webpack.prodlocal.js --progress --colors",
-    "build": "./node_modules/.bin/webpack --config ./build/webpack.prod.js --progress --colors",
+    "build": "./node_modules/.bin/webpack --config ./build/webpack.prod.js --verbose",
     "deploy": "sh ./build/build-prod.sh",
     "test": "npm run test:lint && npm run test:unit",
     "test:watch": "$(npm bin)/jest src/**/*.test.js --verbose --watch",
@@ -115,6 +116,7 @@
     "dropbox": "2.5.12",
     "ease-component": "1.0.0",
     "express": "4.16.3",
+    "forever": "^0.15.3",
     "http-proxy-middleware": "0.18.0",
     "latlon-geohash": "1.1.0",
     "lru-cache": "4.1.1",
